initia without kb

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,7 @@
                         Fuente de Conocimiento:
                     </label>
                     <select id="knowledge-source" class="knowledge-dropdown">
+                        <option value="">Sin base de conocimiento seleccionada</option>
                         <option value="bedrock">Bedrock Knowledge Base</option>
                         <option value="sharepoint">SharePoint Documents</option>
                     </select>
